--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -114,7 +114,7 @@
                                     <img src="images/15.jpeg" loading="lazy" alt="Contact">
 
                                     <div class="img-contant">
-                                        <p><strong>Contact us today!</strong></p>
+                                          <h5>Have any questions?</h5>
                                         <div class="button-row">
                                         <a routerLink="/book-session" class="button">
                                             book a call with Kenny <span class="arrow"><i
