--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,7 +1,7 @@
 <main>
     <div class="maincontentbanner">
         <div class="banner0mobileview">
-            <img src="./images/91.jpg">
+            <img src="./images/image23.jpg">
         </div>
         <section class="banner" style="background-image: url(./images/banner.jpeg);">
             <div class="container">
@@ -242,7 +242,7 @@
                             </li>
                             <div class="button-row" data-aos="fade-up" data-aos-duration="600">
                                 <a class="button" routerLink="/meet-kenny">Read Kenny’s Story</a>
-                                <a class="button" routerLink="/book-session">Book a Session</a>
+                                <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
                             </div>
                         </ul>
 
@@ -315,7 +315,9 @@
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                    <h3>Trusted by the world’s fastest growing community of people</h3>
+                    <h3>Voices of Transformation</h3>
+                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.
+</p>
                     <div class="testimonial-navigation">
                         <button class="swiper-button-next"></button>
                         <button class="swiper-button-prev"></button>
@@ -472,9 +474,8 @@
                         <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                             from the past so they can once again love themselves. </p>
                         <div class="button-row canter">
-                            <a class="button" routerLink="/book-session">Let’s talk</a>
-                        </div>
-                        <div class="step"><small><a routerLink="/book-session">Book a Session</a></small></div>
+                            <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
+                        </div> 
                     </div>
 
                 </div>
@@ -527,9 +528,8 @@
                         <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                             from the past so they can once again love themselves. </p>
                         <div class="button-row canter">
-                            <a class="button" routerLink="/book-session">Let’s talk</a>
-                        </div>
-                        <div class="step"><small><a  routerLink="/book-section">Book a Session</a> </small></div>
+                            <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
+                        </div> 
                     </div>
 
 
