--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -525,7 +525,7 @@
 
                     <div class="featuresse">
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
-                            <strong>Problem Solving</strong>
+                            <strong>Parenting Issues</strong>
                         </div>
                         <div class="divider">|</div>
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
@@ -533,7 +533,11 @@
                         </div>
                         <div class="divider">|</div>
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
-                            <strong>Growth Career</strong>
+                            <strong>Career Growth</strong>
+                        </div>
+                         <div class="divider">|</div>
+                        <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
+                            <strong>Anger Issues</strong>
                         </div>
                     </div>
 
@@ -557,7 +561,7 @@
                 </div>
 
                 <div class="images">
-                    <div class="img1"><img src="images/14.jpeg" loading="lazy" alt="Group Coaching"></div>
+                    <div class="img1"><img src="images/podcast-img-14.jpg" loading="lazy" alt="Group Coaching"></div>
                     <div class="img2"><img src="images/KEN-Podcast-1.jpeg" loading="lazy" alt="Workshop Session"></div>
                     <div class="decor"></div>
                 </div>
@@ -571,7 +575,10 @@
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                    <h3>Trusted by the world’s fastest growing community of people</h3>
+                     <h3>Voices of Transformation</h3>
+                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.
+</p>
+                    
                     <div class="testimonial-navigation">
                         <button class="swiper-button-next"></button>
                         <button class="swiper-button-prev"></button>
