--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -109,7 +109,9 @@
                 <div class="testimonia-row">
                     <div class="testimonial-text">
                         <h5 class="tag-line">Testimonials</h5>
-                        <h3>Trusted by the world’s fastest growing community of people</h3>
+                            <h3>Voices of Transformation</h3>
+                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.
+</p>
                         <div class="testimonial-navigation">
                             <button class="swiper-button-next"></button>
                             <button class="swiper-button-prev"></button>
