--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -40,7 +40,7 @@
                         <p class="desc">Sadly, the individual will deny their part because both society and science have
                             not made them aware of the role they are playing in creating their emotional misery.</p>
 
-                        <p class="desc">Successfully conquering <a class="bolder" routerLink="worst-day-cycle">The Worst Day Cycle </a>
+                        <p class="desc">Successfully conquering <span class="bolder">The Worst Day Cycle </span>
                             requires healing the shame and
                             facing this denial by developing <a class="bolder" routerLink="/courses">Emotional Authenticity.</a>
 
