--- a/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
+++ b/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
@@ -18,7 +18,7 @@
                     <h1 [innerHTML]="wdcpost.title.rendered"></h1>
                     <div [innerHTML]="safeContent" class="contentsocialserd"></div>
                  
-
+ 
                 </div>
                 
 
@@ -46,6 +46,16 @@
                 </div>
             </div>
         </div>
-
+<div class="bg-gray courses-master-classes">
+     <div class="course-heading">
+            <div class="container">
+                <h5 class="tag-line">Learn from me</h5>
+                <h3 class="title">Courses and Master Classes</h3>
+            </div>
+        </div>
+            <div class="container">
+               <app-course-slider/>
+            </div>
+            </div>
     </div>
 </main>
