--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -11,7 +11,7 @@
 
                 <div class="event-details-right">
                     <h3>Book Your 1-Hour Breakthrough Call</h3>
-                    <p class="italic">A safe starting point — not a lifetime commitment.</p> 
+                    <p class="italic">A safe starting point — not a lifetime commitment.</p>
                     <p>This isn’t therapy. It’s not about fixing everything in one call.
                         It’s about finally <b>understanding why you feel the way you do</b> — and what’s
                         really been
@@ -20,7 +20,7 @@
                     <p>In this one-on-one call with Kenny, you’ll begin to:</p>
                     <ul class="features doterd full">
                         <li>
-                             <!-- <span class="listin-img"><img src="images/recycle.png" loading="lazy" alt=""></span> -->
+                            <!-- <span class="listin-img"><img src="images/recycle.png" loading="lazy" alt=""></span> -->
                             <p>Talk openly without fear of judgment or labels</p>
                         </li>
                         <li>
@@ -53,10 +53,10 @@
 
     <section id="clendly" class="clendly">
         <h3>Book a Session Now</h3>
-       <div class="calendly-inline-widget"
-     data-url="https://calendly.com/kennyweiss/single-session-350?hide_gdpr_banner=1"
-     style="min-width:320px; height:700px;">
-</div>
+        <div class="calendly-inline-widget"
+            data-url="https://calendly.com/kennyweiss/single-session-350?hide_gdpr_banner=1"
+            style="min-width:320px; height:700px;">
+        </div>
         <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     </section>
 
@@ -76,7 +76,7 @@
                     <p>You’ve read the books. Taken the courses. Followed the advice of coaches and gurus.
                         And still... something doesn’t shift. The same patterns keep coming back. The pain lingers.
                         <br>
-                        That’s not your fault — and you’re not alone.  
+                        That’s not your fault — and you’re not alone.
                     </p>
                     <p>Most resources out there are designed for the average emotional experience.
                         But your emotions aren’t average.
@@ -85,39 +85,49 @@
                     <p>That’s why Kenny doesn’t offer one-size-fits-all advice.
                         With over 8,000 hours of one-on-one client experience, he knows how to get to the root of
                         what everyone else missed.</p>
-                    <br> 
-                   
-                    
-                    
-                   
+                    <br>
+
+
+
+
                     <ul class="doterd">
                         <li>
                             <p>
-                        <b>Rose from rock bottom — </b> Faced addiction, abuse, divorce, and bankruptcy… and
-                        built a life of purpose by turning pain into wisdom
-                    </p>
+                                <b>Rose from rock bottom — </b> Faced addiction, abuse, divorce, and bankruptcy… and
+                                built a life of purpose by turning pain into wisdom
+                            </p>
                         </li>
 
-                <li><p>
-                            <b>8,000+ hours of one-on-one coaching — </b> No fluff, no templates — just deep,
-                            customized emotional work that changes lives
-                        </p></li>
-                <li><p>
-                            <b>10,000+ clients helped — </b>From high achievers to those barely hanging on — he
-                            meets you exactly where you are
-                        </p></li>
-                <li><p>
-                            <b>No judgment. Ever. — </b> You won’t be rushed, labeled, or “fixed” — you’ll be
-                            heard, fully and safely
-                        </p></li>
-                <li><p>
-                            <b>When self-help doesn’t help — </b> If books and courses haven’t worked, it’s because
-                            they weren’t built around youremotions. Kenny’s method is.
-                        </p></li>
-                <li><p>
-                            <b>The last piece of the puzzle — </b> Most people come to Kenny when nothing else has
-                            worked — and walk away with clarity, direction, and peace
-                        </p></li> 
+                        <li>
+                            <p>
+                                <b>8,000+ hours of one-on-one coaching — </b> No fluff, no templates — just deep,
+                                customized emotional work that changes lives
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <b>10,000+ clients helped — </b>From high achievers to those barely hanging on — he
+                                meets you exactly where you are
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <b>No judgment. Ever. — </b> You won’t be rushed, labeled, or “fixed” — you’ll be
+                                heard, fully and safely
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <b>When self-help doesn’t help — </b> If books and courses haven’t worked, it’s because
+                                they weren’t built around youremotions. Kenny’s method is.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                <b>The last piece of the puzzle — </b> Most people come to Kenny when nothing else has
+                                worked — and walk away with clarity, direction, and peace
+                            </p>
+                        </li>
 
                     </ul>
 
@@ -181,7 +191,7 @@
 
                 <div class="images">
                     <div class="img1"><img src="images/2.jpeg" loading="lazy" alt="Group Coaching"></div>
-                   
+
                     <div class="decor"></div>
                 </div>
             </div>
@@ -192,70 +202,15 @@
             <div class="testimonia-row">
                 <div class="testimonial-text">
                     <h5 class="tag-line">Testimonials</h5>
-                        <h3>Voices of Transformation</h3>
-                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.
-</p>
-                    <div class="testimonial-navigation">
-                        <button class="swiper-button-next"></button>
-                        <button class="swiper-button-prev"></button>
-                    </div>
+                    <!-- <h3>Voices of Transformation</h3>
+                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.</p> -->
+
                 </div>
 
 
                 <div class="swiper testimoalkenny">
-                    <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="testimonial-card" id="testimonial-card">
-                                <img src="images/testimonial-img.svg" loading="lazy" alt="" class="testimonialimg" />
-                                <img src="images/5.jpeg" loading="lazy" alt="" class="userpertion"
-                                    alt="Testimonial Person" />
-                                <div class="testimonial-content">
-                                    <h3>Monday</h3>
-                                    <img src="images/star.svg" loading="lazy" alt="" class="stars" />
-                                    <p class="testimonial-message">Thank you, thank you, thank you !
-                                        The Master of Coaching !
-                                        ’I’ve listened to many Therapist’s / Coach and nothing has been so
-                                        beneficial. Kenny Weiss, you are the best.</p>
-                                    <p class="testimonial-author">Carolina Escobar</p>
-                                    <p class="testimonial-role">November 9, 2024.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="testimonial-card" id="testimonial-card">
-                                <img src="images/testimonial-img.svg" loading="lazy" alt="" class="testimonialimg" />
-                                <img src="images/9.jpeg" loading="lazy" alt="" class="userpertion"
-                                    alt="Testimonial Person" />
-                                <div class="testimonial-content">
-                                    <h3>Tuesday</h3>
-                                    <img src="images/star.svg" loading="lazy" alt="" class="stars" />
-                                    <p class="testimonial-message">Kenny is good at what he does. I did a lot of
-                                        healing before I started his class and listening to his videos. But he has
-                                        given me the last piece of the puzzle that I was missing and that is that I
-                                        am tainted with toxic shame. Now I know exactly why my relationships never
-                                        work out. I always pick the wrong people and I am too busy trying to serve
-                                        them and neglecting my own relationship needs.</p>
-                                    <p class="testimonial-author">Laureen Price</p>
-                                    <p class="testimonial-role">August 22, 2024.</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="swiper-slide">
-                            <div class="testimonial-card" id="testimonial-card">
-                                <img src="images/testimonial-img.svg" loading="lazy" alt="" class="testimonialimg" />
-                                <img src="images/12.jpeg" loading="lazy" alt="" class="userpertion"
-                                    alt="Testimonial Person" />
-                                <div class="testimonial-content">
-                                    <h3>Wednesday</h3>
-                                    <img src="images/star.svg" loading="lazy" alt="" class="stars" />
-                                    <p class="testimonial-message">Thank you 🙏😊
-                                        He came to me at the right time.</p>
-                                    <p class="testimonial-author">akshay a dwivedi</p>
-                                    <p class="testimonial-role">August 4, 2024.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="elfsight-app-366dcc1f-99d9-4a0b-8b7d-6ca801f22dc5" data-elfsight-app-lazy></div>
+
                 </div>
 
 
