--- a/src/app/layout/feelings-wheel/feelings-wheel.component.html
+++ b/src/app/layout/feelings-wheel/feelings-wheel.component.html
@@ -104,78 +104,26 @@
         </div>
 
  
-        <div class="testimonial-section">
-            <div class="container">
-                <div class="testimonia-row">
-                    <div class="testimonial-text">
-                        <h5 class="tag-line">Testimonials</h5>
-                            <h3>Voices of Transformation</h3>
-                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.
-</p>
-                        <div class="testimonial-navigation">
-                            <button class="swiper-button-next"></button>
-                            <button class="swiper-button-prev"></button>
-                        </div>
-                    </div>
-
-
-                    <div class="swiper testimoalkenny">
-                        <div class="swiper-wrapper">
-                            <div class="swiper-slide">
-                                <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
-                                    <img src="images/5.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy"/>
-                                    <div class="testimonial-content">
-                                        <h3>Monday</h3>
-                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
-                                        <p class="testimonial-message">Thank you, thank you, thank you !
-                                            The Master of Coaching !
-                                            ’I’ve listened to many Therapist’s / Coach and nothing has been so
-                                            beneficial. Kenny Weiss, you are the best.</p>
-                                        <p class="testimonial-author">Carolina Escobar</p>
-                                        <p class="testimonial-role">November 9, 2024.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="testimonial-card" id="testimonial-card">
-                                    <img src="images/testimonial-img.svg" class="testimonialimg" loading="lazy" alt="" />
-                                    <img src="images/9.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
-                                    <div class="testimonial-content">
-                                        <h3>Tuesday</h3>
-                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
-                                        <p class="testimonial-message">Kenny is good at what he does. I did a lot of
-                                            healing before I started his class and listening to his videos. But he has
-                                            given me the last piece of the puzzle that I was missing and that is that I
-                                            am tainted with toxic shame. Now I know exactly why my relationships never
-                                            work out. I always pick the wrong people and I am too busy trying to serve
-                                            them and neglecting my own relationship needs.</p>
-                                        <p class="testimonial-author">Laureen Price</p>
-                                        <p class="testimonial-role">August 22, 2024.</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="swiper-slide">
-                                <div class="testimonial-card" id="testimonial-card">
-                                    <img src="./images/testimonial-img.svg" class="testimonialimg" />
-                                    <img src="images/12.jpeg" class="userpertion" alt="Testimonial Person" loading="lazy" />
-                                    <div class="testimonial-content">
-                                        <h3>Wednesday</h3>
-                                        <img src="images/star.svg" class="stars" loading="lazy" alt="" />
-                                        <p class="testimonial-message">Thank you 🙏😊
-                                            He came to me at the right time.</p>
-                                        <p class="testimonial-author">akshay a dwivedi</p>
-                                        <p class="testimonial-role">August 4, 2024.</p>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
+         <div class="testimonial-section">
+        <div class="container">
+            <div class="testimonia-row">
+                <div class="testimonial-text">
+                    <h5 class="tag-line">Testimonials</h5>
+                    <!-- <h3>Voices of Transformation</h3>
+                    <p>Hear from clients who turned their struggles into strength with Kenny’s support.</p> -->
 
                 </div>
+
+
+                <div class="swiper testimoalkenny">
+                    <div class="elfsight-app-366dcc1f-99d9-4a0b-8b7d-6ca801f22dc5" data-elfsight-app-lazy></div>
+
+                </div>
+
+
             </div>
         </div>
+    </div>
 
 
  
