--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -425,7 +425,7 @@
                         <div class="button-row canter">
                             <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
                         </div> 
-                        <div class="step"></div>
+                        <div class="step heightfgty"></div>
                     </div>
 
                 </div>
@@ -480,7 +480,7 @@
                         <div class="button-row canter">
                             <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
                         </div> 
-                        <div class="step"></div>
+                        <div class="step heightfgty"></div>
                     </div>
 
 
