--- a/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
+++ b/src/app/layout/worst-day-cycle/wdc-details/wdc-details.component.html
@@ -15,7 +15,7 @@
 
                         </div>
                     </div>
-                    <h1 [innerHTML]="wdcpost.title.rendered"></h1>
+                    <h1 [innerHTML]="wdcpost?.title?.rendered"></h1>
                     <div [innerHTML]="safeContent" class="contentsocialserd"></div>
                  
  
