--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -131,7 +131,7 @@
 
                     </ul>
 
-                    <a class="button" routerLink="/book-session">Get Started</a>
+                    <a class="button" [routerLink]="[]" fragment="clendly">Get Started</a>
                 </div>
             </div>
         </div>
@@ -186,7 +186,7 @@
                     </ul>
 
 
-                    <a routerLink="/book-session" class="button">Discover More</a>
+                    <a [routerLink]="[]" fragment="clendly" class="button">Discover More</a>
                 </div>
 
                 <div class="images">
