--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -161,10 +161,10 @@
                     </tr>
                     <tr>
                         <td>
-                            <p class="b">🤝 Book a Free Call</p>
+                            <p class="b">🤝 Book a Session</p>
                         </td>
-                        <td>Talk with Kenny directly to understand what’s right for you</td>
-                        <td><a class="button" routerLink="book-session">Talk to Kenny</a></td>
+                        <td>Book a Session with Kenny directly to understand what’s right for you</td>
+                        <td><a class="button" routerLink="book-session">Book a Session</a></td>
                     </tr>
                 </tbody>
             </table>
