--- a/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
+++ b/src/app/layout/worst-day-cycle/worst-day-cycle.component.html
@@ -98,7 +98,9 @@
                                     </a>
                         </div>
                         <div class="bookcardbody">
+                            <a  [routerLink]="['/worst-day-cycle', wdcpost.slug]"> 
                             <h4 [innerHTML]="wdcpost.title.rendered">How To Heal The Worst Day Cycle- Part 1</h4>
+</a>
                             <div class="info">
                                 <div><i class="fa-solid fa-calendar-days"></i> May 14, 2022</div>
                                 <div><i class="fa-solid fa-user-tie"></i> Worst Day Cycle</div>
