--- a/src/app/layout/blog/blog.component.html
+++ b/src/app/layout/blog/blog.component.html
@@ -80,10 +80,10 @@
                                                 and learn from it.</p>
                                         </div>
                                         <ul class="social-box">
-                                            <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
-                                            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-                                            <li><a href="#"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                                            <li><a href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                                            <li><a target="_blank" href="https://www.facebook.com/kennyweiss.net"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                            <li><a target="_blank" href="https://www.instagram.com/kennyweiss.kw"><i class="fa-brands fa-instagram"></i></a></li>
+                                            <li><a target="_blank" href="https://www.linkedin.com/in/coachkennyweiss"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                            <li><a target="_blank" href="https://www.youtube.com/channel/UC5eK9c7LRJoK6NW52nlythw"><i class="fa-brands fa-youtube"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
