--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -418,14 +418,13 @@
                     </div>
 
 
-                    <div class="cta-box mobile-hide">
+                    <div class="cta-box step mobile-hide">
                         <h3>Kenny Weiss: Truth & Healing Advocate</h3>
                         <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                             from the past so they can once again love themselves. </p>
                         <div class="button-row canter">
                             <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
-                        </div> 
-                        <div class="step heightfgty"></div>
+                        </div>  
                     </div>
 
                 </div>
@@ -473,14 +472,13 @@
 
 
 
-                    <div class="cta-box desktop-hide">
+                    <div class="cta-box step desktop-hide">
                         <h3>Kenny Weiss: Truth & Healing Advocate</h3>
                         <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                             from the past so they can once again love themselves. </p>
                         <div class="button-row canter">
                             <a class="button" routerLink="/book-session">Book a Session With Kenny</a>
                         </div> 
-                        <div class="step heightfgty"></div>
                     </div>
 
 
