--- a/src/app/layout/podcast/podcast.component.html
+++ b/src/app/layout/podcast/podcast.component.html
@@ -52,50 +52,15 @@
 
                 <div class="audio-podcast-row">
                     <div class="iframe-row"> 
-
-                        <iframe
-                            src="https://creators.spotify.com/pod/show/healthehurtwithkenny/embed/episodes/How-to-Finally-Break-Free-from-a-Narcissistic-Parent-e35ard0"
-                            height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+                   <iframe 
+  src="https://creators.spotify.com/pod/profile/healthehurtwithkenny/" 
+  width="100%" 
+  height="auto" 
+  frameborder="0" 
+  allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" 
+  loading="lazy">
+</iframe>     
                     </div>
-                    <div class="iframe-row">
-                        <iframe
-                            src="https://creators.spotify.com/pod/show/healthehurtwithkenny/embed/episodes/How-to-Heal-from-a-Narcissistic-Parent-5-Powerful-Steps-to-Reclaim-Your-Life-e358o7u/a-ac1oru3"
-                            height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                    </div>
-
-
-
-                    <div class="iframe-row">
-                        <iframe
-                            src="https://creators.spotify.com/pod/show/healthehurtwithkenny/embed/episodes/Stop-Defending--Start-Healing-e3528iu/a-ac1gk8d"
-                            height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                    </div>
-
-
-
-                    <div class="iframe-row">
-                        <iframe
-                            src="https://creators.spotify.com/pod/show/healthehurtwithkenny/embed/episodes/5-DEADLY-Mistakes-Youre-Making-When-Dealing-with-Narcissists-e350gd7/a-ac1emu8"
-                            height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                    </div>
-
-
-                    <div class="iframe-row">
-                        <iframe
-                            src="https://creators.spotify.com/pod/show/healthehurtwithkenny/embed/episodes/Why-You-Keep-Going-Back-to-Emotionally-Unavailable-Men-Even-When-You-Know-Better-e34v3ko/a-ac1chlu"
-                            height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                    </div>
-
-
-                    <div class="iframe-row">
-                        <iframe
-                            src="https://creators.spotify.com/pod/show/healthehurtwithkenny/embed/episodes/Why-People-Dont-Hear-YouAnd-How-to-Fix-It-e34ohvl/a-ac146f4"
-                            height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
-                    </div>
-
-
-                   
-
 
                 </div>
             </div>
