--- a/src/app/layout/podcast/podcast.component.html
+++ b/src/app/layout/podcast/podcast.component.html
@@ -35,7 +35,7 @@
 
                     <div class="img-box">
                        
-                        <img src="images/pod-castimg.jpg"  loading="lazy" alt="" class="image-2">
+                        <img src="./images/pod-castimg.jpg"  loading="lazy" alt="" class="image-2">
                     </div>
 
                 </div>
