--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -181,8 +181,7 @@
                 <!-- Right Side -->
                 <div class="right">
                     <h5 class="tag-line" data-aos="fade-up" data-aos-duration="100">WHO WE ARE</h5>
-                    <h3 data-aos="fade-up" data-aos-duration="1500">Kenny Weiss is an advocate for truth,
-                        responsibility, healing, and forgiveness!</h3>
+                    <h3 data-aos="fade-up" data-aos-duration="1500">Kenny Weiss - Trauma Recovery and Relationship Life Coach</h3>
 
                     <p class="left-br " data-aos="fade-up" data-aos-duration="200">He specializes in helping people
                         heal from their emotional hurts,
