--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -141,7 +141,7 @@
             <div class="flex-about">
                 <div class="left-about" data-aos="fade-up" data-aos-duration="100">
                     <h5 class="tag-line">About Kenny</h5>
-                    <h3>Kenny Weiss is an advocate for truth, responsibility, healing, and forgiveness!</h3>
+                    <h3>Kenny Weiss - Trauma Recovery and Relationship Life Coach</h3>
                     <p>He specializes in helping people heal from their emotional hurts, co-dependence, and pain
                         from the past so they can once again love themselves.</p>
 
