--- a/src/app/layout/book-session/book-session.component.html
+++ b/src/app/layout/book-session/book-session.component.html
@@ -29,7 +29,7 @@
                         </li>
                         <li>
                             <!-- <span class="listin-img"><img src="images/peace.png" loading="lazy" alt=""></span> -->
-                            <p>Understand what’s underneath the anxiety, sadness, or disconnection</p>
+                            <p>Understand what’s underneath the Childhood Trauma, Codependence, or Self Sabotage</p>
                         </li>
                         <li>
                             <!-- <span class="listin-img"><img src="images/idealistic.png" loading="lazy" alt=""></span> -->
@@ -37,7 +37,7 @@
                         </li>
                         <li>
                             <!-- <span class="listin-img"><img src="images/healthy.png" loading="lazy" alt=""></span> -->
-                            <p>Leave with clear next steps tailored to you, not just generic advice</p>
+                            <p>Get clarity on what’s actually keeping you stuck — Relationship Issues, Narcissists Abuse, depression or something else</p>
                         </li>
 
                     </ul>
@@ -147,7 +147,7 @@
 
                     <div class="featuresse">
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
-                            <strong>Problem Solving</strong>
+                            <strong>Childhood Trauma</strong>
                         </div>
                         <div class="divider">|</div>
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
@@ -155,7 +155,11 @@
                         </div>
                         <div class="divider">|</div>
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
-                            <strong>Growth Career</strong>
+                            <strong>Narcissists Abuse</strong>
+                        </div>
+                          <div class="divider">|</div>
+                        <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
+                            <strong>Codependence</strong>
                         </div>
                     </div>
                     <p>Kenny doesn’t offer quick fixes or surface-level advice. He believes real healing only
