--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -151,7 +151,7 @@
                     </p>
                     <p><b>Because you're not broken. You're just unfinished. And that’s something you can change.</b>
                     </p>
-                    <a href="book-session.html" class="button">Start Healing What Was Left Unfinished</a>
+                    <a routerLink="/book-session" class="button">Start Healing What Was Left Unfinished</a>
 
                 </div>
 
@@ -201,7 +201,7 @@
 
                         <div class="followers-item">
                             <i class="fa-brands fa-youtube"></i>
-                            <h5>174k</h5>
+                            <h5>181k</h5>
                         </div>
 
                         <div class="followers-item">
