--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -525,7 +525,7 @@
 
                     <div class="featuresse">
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
-                            <strong>Parenting Issues</strong>
+                            <strong>Childhood Trauma</strong>
                         </div>
                         <div class="divider">|</div>
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
@@ -533,11 +533,11 @@
                         </div>
                         <div class="divider">|</div>
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
-                            <strong>Career Growth</strong>
+                            <strong>Codependence</strong>
                         </div>
                          <div class="divider">|</div>
                         <div class="featurerd"><span class="icon"><i class="fa-solid fa-check"></i></span>
-                            <strong>Anger Issues</strong>
+                            <strong>Narcissists</strong>
                         </div>
                     </div>
 
