--- a/src/app/layout/podcast/podcast.component.html
+++ b/src/app/layout/podcast/podcast.component.html
@@ -3,10 +3,9 @@
             <div class="container">
                 <div class="book-row">
                     <div class="book-cintent" >
-                        <h5 class="tag-line">Latest episode</h5>
-                        <h3>Dreams of an artist and unique ideas scattered through a deserted mind</h3>
-                        <p>This is not meant to be pleasant or polite. It is supposed to be true and unique. Yes, that's
-                            what I try every day... to be unique.</p>
+                        <h5 class="tag-line">Podcast</h5>
+                        <h3>Heal The Hurt Podcast</h3>
+                        <p>Heal The Hurt is a weekly podcast where Kenny shares the knowledge, skills, and tools to love and accept your perfect imperfections so you can reclaim your authentic self through the process of Emotional Authenticity.</p>
 
                         <div class="audio-podcast">
                             <div class="audio-content">
@@ -19,10 +18,8 @@
 
 
                         </div>
-
-
-                        <a class="detail2" href="#audioo">More details</a>
-                        <h4>Follow and subscribe to Heal the Hurt on one of these platforms</h4>
+ 
+                        <p>In his podcast, Kenny leads by example, guiding you on your Journey to Emotional Authenticity so you can be the voice for your hurt, even as he shares his own and his recovery from it. His experience and knowledge are gifts he bestows upon you for your own healing.</p>
                         <div class="flex-podcastbut mt-0">
                             <a class="button" target="_blank"
                                 href="https://www.youtube.com/playlist?list=PLOKbwXgOsMo94Ign8iLvv4mEhnGn1lu09">Youtube</a>
