--- a/src/app/layout/resources/resources.component.html
+++ b/src/app/layout/resources/resources.component.html
@@ -39,7 +39,7 @@
 
                     <div class="button-row">
                         <a class=" button" routerLink="/courses" target="">Explore the Emotional Authenticity Method</a>
-                        <a class="button" routerLink="/book-session" target="_blank">Book a Call with Kenny</a>
+                        <a class="button" routerLink="/book-session" target="_blank">Book A Session With Kenny</a>
                     </div>
 
                 </div>
