--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1326,6 +1326,7 @@ ul.doterd li {
     color: #BBA056;
     font-size: 0.9em;
     cursor: pointer;
+    font-family: 'Poppins';
     border: none;
     background-color: transparent;
 }
