--- a/src/app/layout/meet-kenny/meet-kenny.component.html
+++ b/src/app/layout/meet-kenny/meet-kenny.component.html
@@ -2,7 +2,7 @@
     <section id="top0" class="kanny-content">
         <div class="container">
             <div class="contentallkanny">
-                <img class="form-bac" src="images/form-bac.png">
+                  <img class="form-bac" src="images/form-bac.png" loading="lazy" alt="srt">
                 <h3>I wasn’t broken. I was just never taught how to feel.</h3>
                 <p>I didn’t come from love. I came from survival.</p>
                 <p>My dad was full of rage—hurt so badly by his own father that he had no idea how to show love. My
