--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -5,7 +5,7 @@
     <section id="top0" class="kanny-content">
         <div class="container">
             <div class="contentallkanny">
-                <img class="form-bac" *ngIf="service.bannerHeading" [src]="service.bannerHeading">
+                  <img class="form-bac" src="images/form-bac.png" loading="lazy" alt=""> 
                 <h3>{{ service.acf?.as_parent_heading }}</h3>
                 <div [innerHTML]="service.acf?.intro_discription"></div>
 
