--- a/src/app/layout/healing-services/services-details/childhood-trauma.component.html
+++ b/src/app/layout/healing-services/services-details/childhood-trauma.component.html
@@ -2,10 +2,9 @@
     <div class="hm-spinner"></div>
 </div>
 <main class="mt emonastiolser " *ngIf="!loading">
-    <section id="top0" class="kanny-content">
+    <section id="top0" class="kanny-content" >
         <div class="container">
-            <div class="contentallkanny">
-                <img class="form-bac" *ngIf="service.bannerHeading" [src]="service.bannerHeading">
+            <div class="contentallkanny " style="background: url('images/form-bac.png') no-repeat center center; background-size: auto 105%; background-position: center right;">
                 <h3>{{ service.acf?.as_parent_heading }}</h3>
                 <div [innerHTML]="service.acf?.intro_discription"></div>
 
